// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shapshot of TimerWrapper with timer prop 1`] = `
<div>
  <Timer
    counter={45}
    onEnd={[Function]}
  />
</div>
`;

exports[`shapshot of TimerWrapper without timer prop 1`] = `
<div>
  <Timer
    counter={30}
    onEnd={[Function]}
  />
</div>
`;

exports[`snapshot of TimerWrapper when counter is set to zero 1`] = `
<div>
  <Timer
    counter={0}
    onEnd={[Function]}
  />
</div>
`;
